--- a/templates/login.html
+++ b/templates/login.html
@@ -201,7 +201,7 @@ a {
         </div>
       </div>
       <div class="footer">
-        <span>Created by Shruti A. M.</span>
+        <span>Created by Naman</span>
       </div>
     </div>
 
